add postinstall scripts & change some types in .ts
